@@ -132,6 +132,8 @@ Con_MessageMode_f
 */
 static void Con_MessageMode_f (void)
 {
+	if (cls.state != ca_active || cls.demoplayback)
+		return;
 	chat_team = false;
 	key_dest = key_message;
 }
@@ -143,6 +145,8 @@ Con_MessageMode2_f
 */
 static void Con_MessageMode2_f (void)
 {
+	if (cls.state != ca_active || cls.demoplayback)
+		return;
 	chat_team = true;
 	key_dest = key_message;
 }
