@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2012-10-20 (SVN):
+    * console.c (Con_MessageMode_f, Con_MessageMode2_f): do not set the
+      messagemode when not really connected.
+
+2012-10-20 (SVN):
     * allow 8x fsaa in the menu system and the gtk launcher.
     * updated version date stamp to 2012-10-20.
 
